# the-golden-compiler

./: .gitignore  CMakeLists.txt  README.md
doc/the_golden_e/: tg_0_4_0e.md
src/: cmake.hpp.in  codegen.cpp  codegen.hpp  main.cpp  options.hpp
src/corelib/: corelib.cpp
src/parser/: lex.cpp  lex.hpp
